--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"],
   "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  },
+    "require": ["tsconfig-paths/register"],
+    "files": true
+  }
 }
