--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "serve": "node dist/index.js",
     "migrate": "node-pg-migrate",
-    "migrate-up": "DATABASE_URL=postgres://anton:root@localhost:5432/peduchat-db npm run migrate up"
+    "migrate-up": "DATABASE_URL=postgres://anton:root@localhost:5432/peduchat-db npm run migrate up",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +18,17 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/pg": "^8.11.5",
+    "@types/supertest": "^6.0.2",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "node-pg-migrate": "^7.3.2",
     "nodemon": "^3.1.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
