--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "baseUrl": "./src"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/tests"],
   "ts-node": {
     "require": ["tsconfig-paths/register"],
     "files": true
