--- a/compose.yaml
+++ b/compose.yaml
@@ -11,7 +11,7 @@ services:
     ports:
       - 5432:5432
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 30s
       timeout: 30s
       retries: 3
@@ -21,7 +21,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - "80:80"
+      - '80:80'
     volumes:
       - ./pgadmin_data:/root/.pgadmin:rw
     depends_on:
