--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "migrate-up": "DATABASE_URL=postgres://anton:root@localhost:5432/peduchat-db npm run migrate up",
     "test": "jest --detectOpenHandles",
     "lint": "npx eslint .",
-    "types": "tsc --noEmit"
+    "types": "tsc --noEmit",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
